Fixed 1 memory issue

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 37.85570526123047,
         "position": {
-            "x": 11.86623764038086,
-            "y": 7.024110794067383,
-            "z": 17.47608184814453
+            "x": 22.990232467651367,
+            "y": 18.272308349609375,
+            "z": 3.239656925201416
         },
         "projection": 0,
         "target": {
-            "x": -15.464603424072266,
-            "y": -6.543490409851074,
-            "z": -22.134078979492188
+            "x": 14.863264083862305,
+            "y": 12.183740615844727,
+            "z": 2.300567626953125
         },
         "type": "camera",
         "up": {
@@ -34,39 +34,39 @@
         "children": [
             [
                 {
-                    "attenuation": 9.999999747378752e-05,
+                    "attenuation": 1.0,
                     "color": {
-                        "a": 255.0,
-                        "b": 255.0,
+                        "a": 0.0,
+                        "b": 0.0,
                         "g": 255.0,
-                        "r": 255.0
+                        "r": 0.0
                     },
-                    "cutOff": 10.0,
+                    "cutOff": 1.0,
                     "direction": {
                         "x": 0.4000000059604645,
                         "y": 0.4000000059604645,
                         "z": -0.4000000059604645
                     },
                     "id": 2,
-                    "intensity": 0.5,
-                    "isChild": true,
+                    "intensity": 0.0,
+                    "isChild": false,
                     "light_type": 1,
                     "name": "Light",
                     "position": {
-                        "x": 3.700000762939453,
-                        "y": 12.500007629394531,
-                        "z": 3.0
+                        "x": -2.499998092651367,
+                        "y": 18.600013732910156,
+                        "z": 0.0
                     },
                     "relative_position": {
-                        "x": 4.0,
-                        "y": 6.200007438659668,
-                        "z": 3.0
-                    },
-                    "specularStrength": 0.5,
-                    "target": {
                         "x": 0,
                         "y": 0,
                         "z": 0
+                    },
+                    "specularStrength": 0.0,
+                    "target": {
+                        "x": 0.0,
+                        "y": 0.0,
+                        "z": 1.1350517561031018e-43
                     },
                     "type": "light"
                 }
@@ -81,8 +81,8 @@
         "name": "project/game/models/monkey",
         "normal_texture_path": "",
         "position": {
-            "x": -0.2999992370605469,
-            "y": 6.300000190734863,
+            "x": -7.499998092651367,
+            "y": 13.600013732910156,
             "z": 0.0
         },
         "relative_position": {
@@ -92,8 +92,8 @@
         },
         "rotation": {
             "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "y": 46.66699981689453,
+            "z": 1.3329999446868896
         },
         "roughness_texture_path": "",
         "scale": {
@@ -130,7 +130,7 @@
         "position": {
             "x": 0.0,
             "y": 4.800002098083496,
-            "z": 0.0
+            "z": -1.5000001192092896
         },
         "relative_position": {
             "x": 0.0,
@@ -144,7 +144,7 @@
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 100.0,
+            "x": 97.9000015258789,
             "y": 0.009999999776482582,
             "z": 101.29998016357422
         },
@@ -165,6 +165,47 @@
         "type": "entity"
     },
     {
+        "children": [
+            [
+                {
+                    "attenuation": 9.999999747378752e-05,
+                    "color": {
+                        "a": 255.0,
+                        "b": 255.0,
+                        "g": 255.0,
+                        "r": 255.0
+                    },
+                    "cutOff": 10.0,
+                    "direction": {
+                        "x": 0.4000000059604645,
+                        "y": 0.4000000059604645,
+                        "z": -0.4000000059604645
+                    },
+                    "id": 7,
+                    "intensity": 0.5,
+                    "isChild": true,
+                    "light_type": 1,
+                    "name": "Light",
+                    "position": {
+                        "x": 8.900002479553223,
+                        "y": 8.400002479553223,
+                        "z": 4.0
+                    },
+                    "relative_position": {
+                        "x": 11.30000114440918,
+                        "y": 2.900003433227539,
+                        "z": 4.400000095367432
+                    },
+                    "specularStrength": 0.5,
+                    "target": {
+                        "x": 0,
+                        "y": 0,
+                        "z": 0
+                    },
+                    "type": "light"
+                }
+            ]
+        ],
         "collider_type": 0,
         "id": 2,
         "is_dynamic": false,
@@ -175,9 +216,9 @@
         "name": "Unnamed Entity",
         "normal_texture_path": "",
         "position": {
-            "x": -3.5000016689300537,
+            "x": -2.399998903274536,
             "y": 5.499999046325684,
-            "z": 0.0
+            "z": -0.3999999463558197
         },
         "relative_position": {
             "x": 0.0,
@@ -191,7 +232,7 @@
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 1.0,
+            "x": 13.90000057220459,
             "y": 13.499998092651367,
             "z": 5.2999982833862305
         },
@@ -259,6 +300,53 @@
         "type": "entity"
     },
     {
+        "collider_type": 0,
+        "id": 4,
+        "is_dynamic": false,
+        "mass": 1.0,
+        "material_path": "",
+        "mesh_type": 1,
+        "model_path": "",
+        "name": "Unnamed Entity",
+        "normal_texture_path": "",
+        "position": {
+            "x": 10.899992942810059,
+            "y": 6.499993324279785,
+            "z": -3.8000001907348633
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 10.0,
+            "y": 1.0,
+            "z": 3.0
+        },
+        "script_index": "",
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
         "attenuation": 9.999999747378752e-05,
         "color": {
             "a": 255.0,
@@ -278,14 +366,51 @@
         "light_type": 1,
         "name": "Light",
         "position": {
-            "x": 3.700000762939453,
-            "y": 12.500007629394531,
+            "x": -3.499998092651367,
+            "y": 19.80002212524414,
             "z": 3.0
         },
         "relative_position": {
             "x": 4.0,
-            "y": 6.200007438659668,
+            "y": 6.200008392333984,
             "z": 3.0
+        },
+        "specularStrength": 0.5,
+        "target": {
+            "x": 0,
+            "y": 0,
+            "z": 0
+        },
+        "type": "light"
+    },
+    {
+        "attenuation": 9.999999747378752e-05,
+        "color": {
+            "a": 255.0,
+            "b": 255.0,
+            "g": 255.0,
+            "r": 255.0
+        },
+        "cutOff": 10.0,
+        "direction": {
+            "x": 0.4000000059604645,
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
+        },
+        "id": 7,
+        "intensity": 0.5,
+        "isChild": true,
+        "light_type": 1,
+        "name": "Light",
+        "position": {
+            "x": 8.900002479553223,
+            "y": 8.400002479553223,
+            "z": 4.0
+        },
+        "relative_position": {
+            "x": 11.30000114440918,
+            "y": 2.900003433227539,
+            "z": 4.400000095367432
         },
         "specularStrength": 0.5,
         "target": {
