--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 37.85570526123047,
         "position": {
-            "x": 22.990232467651367,
-            "y": 18.272308349609375,
-            "z": 3.239656925201416
+            "x": 25.05481719970703,
+            "y": 16.010364532470703,
+            "z": 3.6897451877593994
         },
         "projection": 0,
         "target": {
-            "x": 14.863264083862305,
-            "y": 12.183740615844727,
-            "z": 2.300567626953125
+            "x": 18.356321334838867,
+            "y": 10.725293159484863,
+            "z": -1.8957984447479248
         },
         "type": "camera",
         "up": {
@@ -34,39 +34,39 @@
         "children": [
             [
                 {
-                    "attenuation": 1.0,
+                    "attenuation": 2.7489071405544033e+20,
                     "color": {
                         "a": 0.0,
                         "b": 0.0,
-                        "g": 255.0,
-                        "r": 0.0
+                        "g": 7.877006953631948e-39,
+                        "r": 1.1078556424934113e-35
                     },
-                    "cutOff": 1.0,
+                    "cutOff": 0.5018532276153564,
                     "direction": {
-                        "x": 0.4000000059604645,
-                        "y": 0.4000000059604645,
-                        "z": -0.4000000059604645
+                        "x": 2.7489071405544033e+20,
+                        "y": 1.9345910173343265e-19,
+                        "z": 1.8468664570276642e+25
                     },
-                    "id": 2,
-                    "intensity": 0.0,
-                    "isChild": false,
-                    "light_type": 1,
+                    "id": 9,
+                    "intensity": 1.9345910173343265e-19,
+                    "isChild": true,
+                    "light_type": 0,
                     "name": "Light",
                     "position": {
-                        "x": -2.499998092651367,
-                        "y": 18.600013732910156,
+                        "x": -7.499998092651367,
+                        "y": 13.600013732910156,
                         "z": 0.0
                     },
                     "relative_position": {
-                        "x": 0,
-                        "y": 0,
-                        "z": 0
+                        "x": 4.344522980621461e-38,
+                        "y": 3.089022334757627e-41,
+                        "z": 0.0
                     },
-                    "specularStrength": 0.0,
+                    "specularStrength": 1.8468664570276642e+25,
                     "target": {
-                        "x": 0.0,
-                        "y": 0.0,
-                        "z": 1.1350517561031018e-43
+                        "x": 2.7489071405544033e+20,
+                        "y": 1.9345910173343265e-19,
+                        "z": 1.8468664570276642e+25
                     },
                     "type": "light"
                 }
@@ -171,7 +171,7 @@
                     "attenuation": 9.999999747378752e-05,
                     "color": {
                         "a": 255.0,
-                        "b": 255.0,
+                        "b": 0.0,
                         "g": 255.0,
                         "r": 255.0
                     },
@@ -187,20 +187,20 @@
                     "light_type": 1,
                     "name": "Light",
                     "position": {
-                        "x": 8.900002479553223,
-                        "y": 8.400002479553223,
-                        "z": 4.0
+                        "x": -2.399998903274536,
+                        "y": 6.499999046325684,
+                        "z": -0.3999999463558197
                     },
                     "relative_position": {
-                        "x": 11.30000114440918,
-                        "y": 2.900003433227539,
-                        "z": 4.400000095367432
+                        "x": 0.0,
+                        "y": 1.0,
+                        "z": 0.0
                     },
                     "specularStrength": 0.5,
                     "target": {
-                        "x": 0,
-                        "y": 0,
-                        "z": 0
+                        "x": 0.0,
+                        "y": 0.0,
+                        "z": 1.0
                     },
                     "type": "light"
                 }
@@ -264,7 +264,7 @@
         "normal_texture_path": "",
         "position": {
             "x": 9.800000190734863,
-            "y": 8.299999237060547,
+            "y": 8.0,
             "z": 0.0
         },
         "relative_position": {
@@ -273,13 +273,13 @@
             "z": 0.0
         },
         "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "x": -180.0,
+            "y": 180.0,
+            "z": -180.0
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 1.0,
+            "x": 3.0,
             "y": 1.0,
             "z": 1.0
         },
@@ -310,7 +310,7 @@
         "name": "Unnamed Entity",
         "normal_texture_path": "",
         "position": {
-            "x": 10.899992942810059,
+            "x": 19.999988555908203,
             "y": 6.499993324279785,
             "z": -3.8000001907348633
         },
@@ -347,35 +347,35 @@
         "type": "entity"
     },
     {
-        "attenuation": 9.999999747378752e-05,
+        "attenuation": 2.7489071405544033e+20,
         "color": {
-            "a": 255.0,
-            "b": 255.0,
-            "g": 255.0,
-            "r": 255.0
+            "a": 0.0,
+            "b": 0.0,
+            "g": 0.0,
+            "r": -2147483520.0
         },
-        "cutOff": 10.0,
+        "cutOff": 0.5018532276153564,
         "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
+            "x": 2.7489071405544033e+20,
+            "y": 1.9345910173343265e-19,
+            "z": 1.8468664570276642e+25
         },
-        "id": 2,
-        "intensity": 0.5,
+        "id": 7,
+        "intensity": 1.9345910173343265e-19,
         "isChild": true,
         "light_type": 1,
         "name": "Light",
         "position": {
-            "x": -3.499998092651367,
-            "y": 19.80002212524414,
-            "z": 3.0
+            "x": 8.158788594958336e+16,
+            "y": 13.600013732910156,
+            "z": 0.0
         },
         "relative_position": {
-            "x": 4.0,
-            "y": 6.200008392333984,
-            "z": 3.0
+            "x": 8.158788594958336e+16,
+            "y": 0.0,
+            "z": 0.0
         },
-        "specularStrength": 0.5,
+        "specularStrength": 1.8468664570276642e+25,
         "target": {
             "x": 0,
             "y": 0,
@@ -417,6 +417,80 @@
             "x": 0,
             "y": 0,
             "z": 0
+        },
+        "type": "light"
+    },
+    {
+        "attenuation": 1.0,
+        "color": {
+            "a": 0.0,
+            "b": 0.0,
+            "g": 255.0,
+            "r": 0.0
+        },
+        "cutOff": 1.0,
+        "direction": {
+            "x": 0.4000000059604645,
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
+        },
+        "id": 8096,
+        "intensity": 0.0,
+        "isChild": false,
+        "light_type": 1,
+        "name": "",
+        "position": {
+            "x": -2.499998092651367,
+            "y": 18.600013732910156,
+            "z": 0.0
+        },
+        "relative_position": {
+            "x": 0,
+            "y": 0,
+            "z": 0
+        },
+        "specularStrength": 0.0,
+        "target": {
+            "x": 0,
+            "y": 0,
+            "z": 0
+        },
+        "type": "light"
+    },
+    {
+        "attenuation": 9.999999747378752e-05,
+        "color": {
+            "a": 255.0,
+            "b": 255.0,
+            "g": 255.0,
+            "r": 255.0
+        },
+        "cutOff": 10.0,
+        "direction": {
+            "x": 0.4000000059604645,
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
+        },
+        "id": 9,
+        "intensity": 0.5,
+        "isChild": false,
+        "light_type": 0,
+        "name": "Light",
+        "position": {
+            "x": 4.0,
+            "y": 5.0,
+            "z": 3.0
+        },
+        "relative_position": {
+            "x": 0,
+            "y": 0,
+            "z": 0
+        },
+        "specularStrength": 0.5,
+        "target": {
+            "x": -1.4749599015798818e+35,
+            "y": 3.0888822049111943e-41,
+            "z": 1.401298464324817e-45
         },
         "type": "light"
     }
