--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 37.85570526123047,
         "position": {
-            "x": 25.05481719970703,
-            "y": 16.010364532470703,
-            "z": 3.6897451877593994
+            "x": 21.82151222229004,
+            "y": 15.203887939453125,
+            "z": -9.092644691467285
         },
         "projection": 0,
         "target": {
-            "x": 18.356321334838867,
-            "y": 10.725293159484863,
-            "z": -1.8957984447479248
+            "x": 13.681585311889648,
+            "y": 9.363445281982422,
+            "z": -7.187078475952148
         },
         "type": "camera",
         "up": {
@@ -38,8 +38,8 @@
                     "color": {
                         "a": 0.0,
                         "b": 0.0,
-                        "g": 7.877006953631948e-39,
-                        "r": 1.1078556424934113e-35
+                        "g": 7.805898063059785e-39,
+                        "r": 1.0484454286992343e+18
                     },
                     "cutOff": 0.5018532276153564,
                     "direction": {
@@ -47,19 +47,19 @@
                         "y": 1.9345910173343265e-19,
                         "z": 1.8468664570276642e+25
                     },
-                    "id": 9,
+                    "id": 0,
                     "intensity": 1.9345910173343265e-19,
                     "isChild": true,
                     "light_type": 0,
-                    "name": "Light",
+                    "name": "",
                     "position": {
-                        "x": -7.499998092651367,
+                        "x": 4.111542127689728e+15,
                         "y": 13.600013732910156,
                         "z": 0.0
                     },
                     "relative_position": {
-                        "x": 4.344522980621461e-38,
-                        "y": 3.089022334757627e-41,
+                        "x": 4.111542127689728e+15,
+                        "y": 3.061136495317563e-41,
                         "z": 0.0
                     },
                     "specularStrength": 1.8468664570276642e+25,
@@ -255,7 +255,7 @@
     {
         "collider_type": 0,
         "id": 3,
-        "is_dynamic": true,
+        "is_dynamic": false,
         "mass": 1.0,
         "material_path": "",
         "mesh_type": 1,
@@ -263,9 +263,9 @@
         "name": "Unnamed Entity",
         "normal_texture_path": "",
         "position": {
-            "x": 9.800000190734863,
-            "y": 8.0,
-            "z": 0.0
+            "x": 13.100007057189941,
+            "y": 7.900003433227539,
+            "z": -3.799999713897705
         },
         "relative_position": {
             "x": 0.0,
@@ -275,13 +275,13 @@
         "rotation": {
             "x": -180.0,
             "y": 180.0,
-            "z": -180.0
+            "z": -28.0
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 3.0,
+            "x": 6.0,
             "y": 1.0,
-            "z": 1.0
+            "z": 3.0
         },
         "script_index": "coins collector0",
         "script_path": "project/game/coins collector.py",
@@ -347,47 +347,10 @@
         "type": "entity"
     },
     {
-        "attenuation": 2.7489071405544033e+20,
-        "color": {
-            "a": 0.0,
-            "b": 0.0,
-            "g": 0.0,
-            "r": -2147483520.0
-        },
-        "cutOff": 0.5018532276153564,
-        "direction": {
-            "x": 2.7489071405544033e+20,
-            "y": 1.9345910173343265e-19,
-            "z": 1.8468664570276642e+25
-        },
-        "id": 7,
-        "intensity": 1.9345910173343265e-19,
-        "isChild": true,
-        "light_type": 1,
-        "name": "Light",
-        "position": {
-            "x": 8.158788594958336e+16,
-            "y": 13.600013732910156,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 8.158788594958336e+16,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "specularStrength": 1.8468664570276642e+25,
-        "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "type": "light"
-    },
-    {
         "attenuation": 9.999999747378752e-05,
         "color": {
             "a": 255.0,
-            "b": 255.0,
+            "b": 0.0,
             "g": 255.0,
             "r": 255.0
         },
@@ -403,14 +366,14 @@
         "light_type": 1,
         "name": "Light",
         "position": {
-            "x": 8.900002479553223,
-            "y": 8.400002479553223,
-            "z": 4.0
+            "x": -2.399998903274536,
+            "y": 6.499999046325684,
+            "z": -0.3999999463558197
         },
         "relative_position": {
-            "x": 11.30000114440918,
-            "y": 2.900003433227539,
-            "z": 4.400000095367432
+            "x": 0.0,
+            "y": 1.0,
+            "z": 0.0
         },
         "specularStrength": 0.5,
         "target": {
@@ -425,19 +388,19 @@
         "color": {
             "a": 0.0,
             "b": 0.0,
-            "g": 255.0,
-            "r": 0.0
+            "g": 200.84942626953125,
+            "r": 255.0
         },
         "cutOff": 1.0,
         "direction": {
             "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
+            "y": -0.621999979019165,
+            "z": 1.0
         },
-        "id": 8096,
-        "intensity": 0.0,
+        "id": 0,
+        "intensity": 0.7409999966621399,
         "isChild": false,
-        "light_type": 1,
+        "light_type": 0,
         "name": "",
         "position": {
             "x": -2.499998092651367,
@@ -451,46 +414,9 @@
         },
         "specularStrength": 0.0,
         "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 9.999999747378752e-05,
-        "color": {
-            "a": 255.0,
-            "b": 255.0,
-            "g": 255.0,
-            "r": 255.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": 9,
-        "intensity": 0.5,
-        "isChild": false,
-        "light_type": 0,
-        "name": "Light",
-        "position": {
-            "x": 4.0,
-            "y": 5.0,
-            "z": 3.0
-        },
-        "relative_position": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.5,
-        "target": {
-            "x": -1.4749599015798818e+35,
-            "y": 3.0888822049111943e-41,
-            "z": 1.401298464324817e-45
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "type": "light"
     }
