Fixed type error from previous commit

--- a/project.json
+++ b/project.json
@@ -39,7 +39,7 @@
                         "a": 0.0,
                         "b": 0.0,
                         "g": 7.805898063059785e-39,
-                        "r": 1.0484454286992343e+18
+                        "r": 2.07111596838119e+19
                     },
                     "cutOff": 0.5018532276153564,
                     "direction": {
@@ -53,12 +53,12 @@
                     "light_type": 0,
                     "name": "",
                     "position": {
-                        "x": 4.111542127689728e+15,
+                        "x": 8.121996187113882e+16,
                         "y": 13.600013732910156,
                         "z": 0.0
                     },
                     "relative_position": {
-                        "x": 4.111542127689728e+15,
+                        "x": 8.121996187113882e+16,
                         "y": 3.061136495317563e-41,
                         "z": 0.0
                     },
@@ -168,39 +168,39 @@
         "children": [
             [
                 {
-                    "attenuation": 9.999999747378752e-05,
+                    "attenuation": 1.0,
                     "color": {
-                        "a": 255.0,
-                        "b": 0.0,
-                        "g": 255.0,
-                        "r": 255.0
+                        "a": 0.0,
+                        "b": 255.0,
+                        "g": 0.0,
+                        "r": 0.0
                     },
-                    "cutOff": 10.0,
+                    "cutOff": 1.0,
                     "direction": {
                         "x": 0.4000000059604645,
                         "y": 0.4000000059604645,
                         "z": -0.4000000059604645
                     },
                     "id": 7,
-                    "intensity": 0.5,
+                    "intensity": 1.0,
                     "isChild": true,
                     "light_type": 1,
                     "name": "Light",
                     "position": {
-                        "x": -2.399998903274536,
-                        "y": 6.499999046325684,
-                        "z": -0.3999999463558197
+                        "x": -1.3999989032745361,
+                        "y": 5.499999046325684,
+                        "z": 0.6000000238418579
                     },
                     "relative_position": {
+                        "x": 1.0,
+                        "y": 0.0,
+                        "z": 1.0
+                    },
+                    "specularStrength": 0.0,
+                    "target": {
                         "x": 0.0,
                         "y": 1.0,
                         "z": 0.0
-                    },
-                    "specularStrength": 0.5,
-                    "target": {
-                        "x": 0.0,
-                        "y": 0.0,
-                        "z": 1.0
                     },
                     "type": "light"
                 }
@@ -283,8 +283,8 @@
             "y": 1.0,
             "z": 3.0
         },
-        "script_index": "coins collector0",
-        "script_path": "project/game/coins collector.py",
+        "script_index": "NONE",
+        "script_path": "",
         "surface_material": {
             "DiffuseIntensity": 0.5,
             "Roughness": 0.5,
@@ -347,6 +347,43 @@
         "type": "entity"
     },
     {
+        "attenuation": 2.7489071405544033e+20,
+        "color": {
+            "a": 0.0,
+            "b": 0.0,
+            "g": 0.0,
+            "r": -2147483520.0
+        },
+        "cutOff": 0.5018532276153564,
+        "direction": {
+            "x": 2.7489071405544033e+20,
+            "y": 1.9345910173343265e-19,
+            "z": 1.8468664570276642e+25
+        },
+        "id": 0,
+        "intensity": 1.9345910173343265e-19,
+        "isChild": true,
+        "light_type": 0,
+        "name": "",
+        "position": {
+            "x": 4.111542127689728e+15,
+            "y": 13.600013732910156,
+            "z": 0.0
+        },
+        "relative_position": {
+            "x": 4.111542127689728e+15,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "specularStrength": 1.8468664570276642e+25,
+        "target": {
+            "x": 2.7489071405544033e+20,
+            "y": 1.9345910173343265e-19,
+            "z": 1.8468664570276642e+25
+        },
+        "type": "light"
+    },
+    {
         "attenuation": 9.999999747378752e-05,
         "color": {
             "a": 255.0,
@@ -388,7 +425,7 @@
         "color": {
             "a": 0.0,
             "b": 0.0,
-            "g": 200.84942626953125,
+            "g": 0.0,
             "r": 255.0
         },
         "cutOff": 1.0,
