--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 37.85570526123047,
         "position": {
-            "x": 21.82151222229004,
-            "y": 15.203887939453125,
-            "z": -9.092644691467285
+            "x": 35.040504455566406,
+            "y": 12.874279022216797,
+            "z": -10.528153419494629
         },
         "projection": 0,
         "target": {
-            "x": 13.681585311889648,
-            "y": 9.363445281982422,
-            "z": -7.187078475952148
+            "x": 26.258243560791016,
+            "y": 9.546571731567383,
+            "z": -6.5534491539001465
         },
         "type": "camera",
         "up": {
@@ -38,8 +38,8 @@
                     "color": {
                         "a": 0.0,
                         "b": 0.0,
-                        "g": 7.805898063059785e-39,
-                        "r": 2.07111596838119e+19
+                        "g": 7.89737482681091e-39,
+                        "r": 42132568.0
                     },
                     "cutOff": 0.5018532276153564,
                     "direction": {
@@ -47,19 +47,19 @@
                         "y": 1.9345910173343265e-19,
                         "z": 1.8468664570276642e+25
                     },
-                    "id": 0,
+                    "id": 1063616512,
                     "intensity": 1.9345910173343265e-19,
                     "isChild": true,
                     "light_type": 0,
                     "name": "",
                     "position": {
-                        "x": 8.121996187113882e+16,
+                        "x": 165217.75,
                         "y": 13.600013732910156,
                         "z": 0.0
                     },
                     "relative_position": {
-                        "x": 8.121996187113882e+16,
-                        "y": 3.061136495317563e-41,
+                        "x": 165225.25,
+                        "y": 3.097009736004278e-41,
                         "z": 0.0
                     },
                     "specularStrength": 1.8468664570276642e+25,
@@ -168,39 +168,39 @@
         "children": [
             [
                 {
-                    "attenuation": 1.0,
+                    "attenuation": 0.0,
                     "color": {
                         "a": 0.0,
-                        "b": 255.0,
-                        "g": 0.0,
+                        "b": 0.0,
+                        "g": 255.0,
                         "r": 0.0
                     },
-                    "cutOff": 1.0,
+                    "cutOff": 0.0,
                     "direction": {
                         "x": 0.4000000059604645,
                         "y": 0.4000000059604645,
                         "z": -0.4000000059604645
                     },
                     "id": 7,
-                    "intensity": 1.0,
-                    "isChild": true,
+                    "intensity": 0.0,
+                    "isChild": false,
                     "light_type": 1,
                     "name": "Light",
                     "position": {
-                        "x": -1.3999989032745361,
+                        "x": -2.399998903274536,
                         "y": 5.499999046325684,
                         "z": 0.6000000238418579
                     },
                     "relative_position": {
+                        "x": 0,
+                        "y": 0,
+                        "z": 0
+                    },
+                    "specularStrength": 1.0,
+                    "target": {
                         "x": 1.0,
                         "y": 0.0,
                         "z": 1.0
-                    },
-                    "specularStrength": 0.0,
-                    "target": {
-                        "x": 0.0,
-                        "y": 1.0,
-                        "z": 0.0
                     },
                     "type": "light"
                 }
@@ -347,6 +347,53 @@
         "type": "entity"
     },
     {
+        "collider_type": 0,
+        "id": 5,
+        "is_dynamic": true,
+        "mass": 1.0,
+        "material_path": "",
+        "mesh_type": 24,
+        "model_path": "",
+        "name": "Unnamed Entity",
+        "normal_texture_path": "",
+        "position": {
+            "x": 21.30000877380371,
+            "y": 8.5,
+            "z": 0.0
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
+        },
+        "script_index": "coins collector0",
+        "script_path": "project/game/coins collector.py",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
         "attenuation": 2.7489071405544033e+20,
         "color": {
             "a": 0.0,
@@ -366,12 +413,12 @@
         "light_type": 0,
         "name": "",
         "position": {
-            "x": 4.111542127689728e+15,
+            "x": 8.121996187113882e+16,
             "y": 13.600013732910156,
             "z": 0.0
         },
         "relative_position": {
-            "x": 4.111542127689728e+15,
+            "x": 8.121996187113882e+16,
             "y": 0.0,
             "z": 0.0
         },
@@ -384,35 +431,35 @@
         "type": "light"
     },
     {
-        "attenuation": 9.999999747378752e-05,
+        "attenuation": 1.0,
         "color": {
-            "a": 255.0,
-            "b": 0.0,
-            "g": 255.0,
-            "r": 255.0
+            "a": 0.0,
+            "b": 255.0,
+            "g": 0.0,
+            "r": 0.0
         },
-        "cutOff": 10.0,
+        "cutOff": 1.0,
         "direction": {
             "x": 0.4000000059604645,
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
         "id": 7,
-        "intensity": 0.5,
+        "intensity": 1.0,
         "isChild": true,
         "light_type": 1,
         "name": "Light",
         "position": {
-            "x": -2.399998903274536,
-            "y": 6.499999046325684,
-            "z": -0.3999999463558197
+            "x": -1.3999989032745361,
+            "y": 5.499999046325684,
+            "z": 0.6000000238418579
         },
         "relative_position": {
-            "x": 0.0,
-            "y": 1.0,
-            "z": 0.0
+            "x": 1.0,
+            "y": 0.0,
+            "z": 1.0
         },
-        "specularStrength": 0.5,
+        "specularStrength": 0.0,
         "target": {
             "x": 0,
             "y": 0,
@@ -434,7 +481,7 @@
             "y": -0.621999979019165,
             "z": 1.0
         },
-        "id": 0,
+        "id": 1063616512,
         "intensity": 0.7409999966621399,
         "isChild": false,
         "light_type": 0,
