Fixed white theme -> gray theme inconsistencies

--- a/project.json
+++ b/project.json
@@ -38,8 +38,8 @@
                     "color": {
                         "a": 0.0,
                         "b": 0.0,
-                        "g": 7.89737482681091e-39,
-                        "r": 42132568.0
+                        "g": 7,
+                        "r": 255.0
                     },
                     "cutOff": 0.5018532276153564,
                     "direction": {
@@ -232,9 +232,9 @@
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 13.90000057220459,
-            "y": 13.499998092651367,
-            "z": 5.2999982833862305
+            "x": 13,
+            "y": 13,
+            "z": 5
         },
         "script_index": "",
         "script_path": "",
@@ -394,12 +394,12 @@
         "type": "entity"
     },
     {
-        "attenuation": 2.7489071405544033e+20,
+        "attenuation": 2.7,
         "color": {
             "a": 0.0,
             "b": 0.0,
             "g": 0.0,
-            "r": -2147483520.0
+            "r": 0
         },
         "cutOff": 0.5018532276153564,
         "direction": {
