--- a/imgui.ini
+++ b/imgui.ini
@@ -20,13 +20,14 @@ Collapsed=0
 
 [Window][Objects List]
 Pos=0,56
-Size=369,844
+Size=370,844
 Collapsed=0
 
 [Window][Inspector Window]
-Pos=853,63
+Pos=1460,56
 Size=440,844
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Scene Editor Window]
 Pos=371,56
@@ -67,4 +68,9 @@ Collapsed=0
 Pos=51,101
 Size=746,411
 Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=1458,844 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=440,844 Selected=0xF58E28BB
 
