--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 37.85570526123047,
         "position": {
-            "x": 35.040504455566406,
-            "y": 12.874279022216797,
-            "z": -10.528153419494629
+            "x": 22.456804275512695,
+            "y": 21.533674240112305,
+            "z": -8.53758716583252
         },
         "projection": 0,
         "target": {
-            "x": 26.258243560791016,
-            "y": 9.546571731567383,
-            "z": -6.5534491539001465
+            "x": 13.843156814575195,
+            "y": 16.57842445373535,
+            "z": -6.246169090270996
         },
         "type": "camera",
         "up": {
@@ -38,8 +38,8 @@
                     "color": {
                         "a": 0.0,
                         "b": 0.0,
-                        "g": 7,
-                        "r": 255.0
+                        "g": 7.864500364837849e-39,
+                        "r": -0.000862552784383297
                     },
                     "cutOff": 0.5018532276153564,
                     "direction": {
@@ -53,13 +53,13 @@
                     "light_type": 0,
                     "name": "",
                     "position": {
-                        "x": 165217.75,
+                        "x": -7.500001430511475,
                         "y": 13.600013732910156,
                         "z": 0.0
                     },
                     "relative_position": {
-                        "x": 165225.25,
-                        "y": 3.097009736004278e-41,
+                        "x": -3.3825526770669967e-06,
+                        "y": 3.08411779013249e-41,
                         "z": 0.0
                     },
                     "specularStrength": 1.8468664570276642e+25,
@@ -78,7 +78,7 @@
         "mass": 1.0,
         "material_path": "project/game/file3.mat",
         "model_path": "project/game/models/monkey.obj",
-        "name": "project/game/models/monkey",
+        "name": "monkey",
         "normal_texture_path": "",
         "position": {
             "x": -7.499998092651367,
@@ -170,35 +170,35 @@
                 {
                     "attenuation": 0.0,
                     "color": {
-                        "a": 0.0,
-                        "b": 0.0,
-                        "g": 255.0,
-                        "r": 0.0
+                        "a": 255.0,
+                        "b": 255.0,
+                        "g": 0.0,
+                        "r": 255.0
                     },
                     "cutOff": 0.0,
                     "direction": {
-                        "x": 0.4000000059604645,
-                        "y": 0.4000000059604645,
-                        "z": -0.4000000059604645
+                        "x": 1.0,
+                        "y": 1.0,
+                        "z": 0.0
                     },
-                    "id": 7,
-                    "intensity": 0.0,
+                    "id": 1063616512,
+                    "intensity": 1.0,
                     "isChild": false,
-                    "light_type": 1,
-                    "name": "Light",
+                    "light_type": 0,
+                    "name": "",
                     "position": {
-                        "x": -2.399998903274536,
-                        "y": 5.499999046325684,
-                        "z": 0.6000000238418579
+                        "x": -1.3999989032745361,
+                        "y": 6.499999046325684,
+                        "z": -0.3999999463558197
                     },
                     "relative_position": {
                         "x": 0,
                         "y": 0,
                         "z": 0
                     },
-                    "specularStrength": 1.0,
+                    "specularStrength": 0.0,
                     "target": {
-                        "x": 1.0,
+                        "x": 0.0,
                         "y": 0.0,
                         "z": 1.0
                     },
@@ -232,9 +232,9 @@
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 13,
-            "y": 13,
-            "z": 5
+            "x": 13.0,
+            "y": 13.0,
+            "z": 5.0
         },
         "script_index": "",
         "script_path": "",
@@ -394,12 +394,12 @@
         "type": "entity"
     },
     {
-        "attenuation": 2.7,
+        "attenuation": 2.7489071405544033e+20,
         "color": {
             "a": 0.0,
             "b": 0.0,
             "g": 0.0,
-            "r": 0
+            "r": 255.0
         },
         "cutOff": 0.5018532276153564,
         "direction": {
@@ -407,18 +407,18 @@
             "y": 1.9345910173343265e-19,
             "z": 1.8468664570276642e+25
         },
-        "id": 0,
+        "id": 1063616512,
         "intensity": 1.9345910173343265e-19,
         "isChild": true,
         "light_type": 0,
         "name": "",
         "position": {
-            "x": 8.121996187113882e+16,
+            "x": 165217.75,
             "y": 13.600013732910156,
             "z": 0.0
         },
         "relative_position": {
-            "x": 8.121996187113882e+16,
+            "x": 165225.25,
             "y": 0.0,
             "z": 0.0
         },
@@ -431,35 +431,35 @@
         "type": "light"
     },
     {
-        "attenuation": 1.0,
+        "attenuation": 0.0,
         "color": {
             "a": 0.0,
-            "b": 255.0,
-            "g": 0.0,
+            "b": 0.0,
+            "g": 255.0,
             "r": 0.0
         },
-        "cutOff": 1.0,
+        "cutOff": 0.0,
         "direction": {
             "x": 0.4000000059604645,
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
         "id": 7,
-        "intensity": 1.0,
-        "isChild": true,
+        "intensity": 0.0,
+        "isChild": false,
         "light_type": 1,
         "name": "Light",
         "position": {
-            "x": -1.3999989032745361,
+            "x": -2.399998903274536,
             "y": 5.499999046325684,
             "z": 0.6000000238418579
         },
         "relative_position": {
-            "x": 1.0,
-            "y": 0.0,
-            "z": 1.0
+            "x": 0,
+            "y": 0,
+            "z": 0
         },
-        "specularStrength": 0.0,
+        "specularStrength": 1.0,
         "target": {
             "x": 0,
             "y": 0,
